Добавить ручку для просмотра истории проверок сайта
